# module-process

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README  README.md  qore-process-module.spec
cmake/: unix-config.h.cmake
src/: ProcessGroup.cpp  ProcessGroup.h  ProcessPriv.cpp  ProcessPriv.h  QC_Process.qpp  QC_ProcessGroup.qpp  QoreProcessHandler.h  constants.qpp  process-module.qpp  process.qpp  processpriv.cpp  processpriv.cpp.autosave  processpriv.h  qoreprocesshandler.h
src/boost/process/: .environment.hpp.swp
test/: README  process.qtest  test_cwd.q  test_env.q  test_false.q  test_io.q  test_output.q  test_sleep.q  test_true.q  test_utf8.q  test_wdir.q
test/docker_test/: test-alpine.sh  test-ubuntu.sh  test.sh
